--- a/001.html
+++ b/001.html
@@ -258,7 +258,7 @@
     <div class="clinic-deco">📋 👩‍⚕️ 🌡️</div>
 
     <footer>
-        <p>Salam Sehat,<br><strong>- Dr. Muin -</strong> <span class="ani-emoji">🔅</span></p>
+        <i>Ditulis dari HATI untuk semua yang masih punya HATI</i><p><strong>- Dr. Muin -</strong> </p><p><span class="ani-emoji">🔅🔅🔅</span></p>
     </footer>
 </div>
 
