--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
             </div>
 
             <div class="card">
-                <h2>Senyum yang Sembuh</h2>
-                <p>Ada kebahagiaan yang tidak bisa dibayar dengan materi, yakni melihat harapan kembali tumbuh.</p>
-                <a class="btn" href="https://muin123-dr.github.io/Kisah/001.html">
+                <h2>👐 ANTARA PELUKAN HANGAT & GENGGAMAN ERAT</h2>
+                <p>Ketika Dingin Layar Mengalahkan Hangatnya Sentuhan 📱</p>
+                <a class="btn" href="https://muin123-dr.github.io/Kisah/002.html">
                     Buka Catatan
                 </a>
             </div>
@@ -167,7 +167,7 @@
             <div class="card">
                 <h2>Di Ambang Lelah</h2>
                 <p>Malam-malam panjang di ruang jaga yang mengajarkan saya arti sebuah kesabaran.</p>
-                <a class="btn" href="https://muin123-dr.github.io/Kisah/001.html">
+                <a class="btn" href="https://muin123-dr.github.io/Kisah/003.html">
                     Buka Catatan
                 </a>
             </div>
