--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             </div>
 
             <div class="card">
-                <h2>Di Ambang Lelah</h2>
-                <p>Malam-malam panjang di ruang jaga yang mengajarkan saya arti sebuah kesabaran.</p>
+                <h2>⛈️ BISIK HALILINTAR DI SELA-SUJUD</h2>
+                <p>Ketika Dunia Maya Menyusup ke Mushola 🕌</p>
                 <a class="btn" href="https://muin123-dr.github.io/Kisah/003.html">
                     Buka Catatan
                 </a>
